<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.hap.trip.widget.InputTextView
                    android:id="@+id/input_origin"
                    style="@style/inputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:hint="@string/flight_origin"
                    custom:inputType="text"
                    custom:mainHint="@string/flight_origin_hint" />

                <com.hap.trip.widget.InputTextView
                    android:id="@+id/input_destination"
                    style="@style/inputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:hint="@string/flight_destination"
                    custom:inputType="text"
                    custom:mainHint="@string/flight_destination_hint" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.hap.trip.widget.InputTextView
                    android:id="@+id/input_depart"
                    style="@style/inputTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    custom:hint="@string/flight_depart"
                    custom:inputType="date"
                    custom:mainHint="@string/flight_select_date" />

                <com.hap.trip.widget.InputTextView
                    android:id="@+id/input_returning"
                    style="@style/inputTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    custom:hint="@string/flight_returning"
                    custom:inputType="date"
                    custom:mainHint="@string/flight_select_date" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.hap.trip.widget.InputTextView
                    android:id="@+id/input_passengers"
                    style="@style/inputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:hint="@string/flight_passenger"
                    custom:inputType="number"
                    custom:mainHint="@string/flight_passenger_hint" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/flight_continue" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>